--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Discussion App | Advance Js</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="Logo.png" type="image/x-icon">
   </head>
   <body>
     <h1 id="pageTitle">Discussion Portal</h1>
